--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -1,11 +1,25 @@
 sinhala=\u0dc3\u0dd2\u0d82\u0dc4\u0dbd
 tamil=\u0ba4\u0bae\u0bbf\u0bb4\u0bcd
 english=English
-hospitalStatistics=Hospital Statistics
+
+sname=Name in Sinhala
+tname=Name in Tamil
+ename=Name in English
+type =Type
+parent=Parent
 
 PersistenceErrorOccured=A persistence error occurred.
-Previous=Previous
-Next=Next
+Create=Create
+View=View
+Edit=Edit
+Delete=Delete
+Close=Close
+Cancel=Cancel
+Save=Save
+SelectOneMessage=Select One...
+Home=Home
+Maintenance=Maintenance
+AppName=Hospital Statistics
 
 CategoryCreated=Category was successfully created.
 CategoryUpdated=Category was successfully updated.
@@ -142,12 +156,6 @@ ListInstitutionEditLink=Edit
 ListInstitutionViewLink=View
 ListInstitutionCreateLink=Create New Institution
 ListInstitutionIndexLink=Index
-ListInstitutionTitle_id=Id
-ListInstitutionTitle_sname=Sname
-ListInstitutionTitle_tname=Tname
-ListInstitutionTitle_ename=Ename
-ListInstitutionTitle_type=Type
-ListInstitutionTitle_parent=Parent
 PersonCreated=Person was successfully created.
 PersonUpdated=Person was successfully updated.
 PersonDeleted=Person was successfully deleted.
@@ -155,6 +163,12 @@ CreatePersonTitle=Create New Person
 CreatePersonSaveLink=Save
 CreatePersonShowAllLink=Show All Person Items
 CreatePersonIndexLink=Index
+CreatePersonLabel_userLanguage=UserLanguage:
+CreatePersonTitle_userLanguage=UserLanguage
+CreatePersonLabel_institution=Institution:
+CreatePersonTitle_institution=Institution
+CreatePersonLabel_userRole=UserRole:
+CreatePersonTitle_userRole=UserRole
 CreatePersonLabel_sname=Sname:
 CreatePersonTitle_sname=Sname
 CreatePersonLabel_tname=Tname:
@@ -179,6 +193,12 @@ EditPersonSaveLink=Save
 EditPersonViewLink=View
 EditPersonShowAllLink=Show All Person Items
 EditPersonIndexLink=Index
+EditPersonLabel_userLanguage=UserLanguage:
+EditPersonTitle_userLanguage=UserLanguage
+EditPersonLabel_institution=Institution:
+EditPersonTitle_institution=Institution
+EditPersonLabel_userRole=UserRole:
+EditPersonTitle_userRole=UserRole
 EditPersonLabel_sname=Sname:
 EditPersonTitle_sname=Sname
 EditPersonLabel_tname=Tname:
@@ -204,6 +224,12 @@ ViewPersonEditLink=Edit
 ViewPersonCreateLink=Create New Person
 ViewPersonShowAllLink=Show All Person Items
 ViewPersonIndexLink=Index
+ViewPersonLabel_userLanguage=UserLanguage:
+ViewPersonTitle_userLanguage=UserLanguage
+ViewPersonLabel_institution=Institution:
+ViewPersonTitle_institution=Institution
+ViewPersonLabel_userRole=UserRole:
+ViewPersonTitle_userRole=UserRole
 ViewPersonLabel_sname=Sname:
 ViewPersonTitle_sname=Sname
 ViewPersonLabel_tname=Tname:
@@ -229,6 +255,9 @@ ListPersonEditLink=Edit
 ListPersonViewLink=View
 ListPersonCreateLink=Create New Person
 ListPersonIndexLink=Index
+ListPersonTitle_userLanguage=UserLanguage
+ListPersonTitle_institution=Institution
+ListPersonTitle_userRole=UserRole
 ListPersonTitle_sname=Sname
 ListPersonTitle_tname=Tname
 ListPersonTitle_ename=Ename
